[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["redis-rs-session"] }
flow_helpers = { git = "https://github.com/barterYard/rust_flow_helper", features = [
  "mongo",
  "logger",
  "web_server",
], branch = "main" }
log = "0.4.19"
serde = "1.0.166"
futures = "0.3.28"
serde_json = "1.0.100"
actix-limitation = "0.4.0"
rand = "0.8.5"
